# small-transformer-addition

./: .gitignore  README  pyproject.toml  train.py
config/: config.yaml
config/experiment/: scratch.yaml  scratch_0.yaml  scratch_1.yaml  scratch_2.yaml  scratch_3.yaml  scratch_4.yaml  scratch_5.yaml  scratch_6.yaml  scratch_7.yaml  scratch_8.yaml
src/: dataset.py  huggingface_callbacks.py
