[project]
name = "small-transformer-addition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "hydra-core>=1.3.2",
    "peft>=0.18.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
]
